--- a/interface/app/index.html
+++ b/interface/app/index.html
@@ -51,12 +51,6 @@
     <div ng-view=""></div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -75,6 +69,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/test-runs.js"></script>
+    <script src="scripts/controllers/features.js"></script>
     <!-- endbuild -->
 </body>
 </html>
