--- a/interface/app/index.html
+++ b/interface/app/index.html
@@ -70,6 +70,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/test-runs.js"></script>
     <script src="scripts/controllers/features.js"></script>
+    <script src="scripts/controllers/scenarii.js"></script>
     <!-- endbuild -->
 </body>
 </html>
