--- a/interface/app/index.html
+++ b/interface/app/index.html
@@ -67,6 +67,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/shared.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/test-runs.js"></script>
     <script src="scripts/controllers/features.js"></script>
