--- a/interface/app/index.html
+++ b/interface/app/index.html
@@ -33,14 +33,13 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">interface</a>
+            <a class="navbar-brand" href="#/">Tests Cucumber</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a href="#/">Home</a></li>
-              <li><a href="#/test-runs">Test Runs</a></li>
+              <li><a href="#/">Derniers tirs de tests</a></li>
             </ul>
           </div>
         </div>
@@ -68,7 +67,6 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/shared.js"></script>
-    <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/test-runs.js"></script>
     <script src="scripts/controllers/features.js"></script>
     <script src="scripts/controllers/scenarii.js"></script>
