--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -76,6 +76,9 @@
 <!-- endbower -->
 <!-- endbuild -->
 
+<!-- Dynamically generated configuration-->
+<script src="scripts/config.js"></script>
+
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/shared.js"></script>
