--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -84,11 +84,11 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
-<script src="scripts/controllers/shared.js"></script>
-<script src="scripts/controllers/errors.js"></script>
-<script src="scripts/controllers/test-runs.js"></script>
-<script src="scripts/controllers/features.js"></script>
-<script src="scripts/controllers/scenarii.js"></script>
+<script src="scripts/shared.js"></script>
+<script src="scripts/errors.js"></script>
+<script src="scripts/test-runs.js"></script>
+<script src="scripts/features.js"></script>
+<script src="scripts/scenarii.js"></script>
 <!-- endbuild -->
 </body>
 </html>
