--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -84,7 +84,7 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
-<script src="scripts/shared.js"></script>
+<script src="scripts/directives.js"></script>
 <script src="scripts/errors.js"></script>
 <script src="scripts/test-runs.js"></script>
 <script src="scripts/features.js"></script>
