--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -86,6 +86,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/directives.js"></script>
 <script src="scripts/errors.js"></script>
+<script src="scripts/comments.js"></script>
 <script src="scripts/test-runs.js"></script>
 <script src="scripts/features.js"></script>
 <script src="scripts/scenarii.js"></script>
