--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -84,6 +84,7 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
+<script src="scripts/browser-storage.js"></script>
 <script src="scripts/directives.js"></script>
 <script src="scripts/errors.js"></script>
 <script src="scripts/comments.js"></script>
