--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -21,28 +21,25 @@
   your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<!-- Add your site or application content here -->
-<div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
+<div class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
 
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
 
-        <a class="navbar-brand" href="#/">Tests Cucumber</a>
-      </div>
+      <a class="navbar-brand" href="#/">Tests Cucumber</a>
+    </div>
 
-      <div class="collapse navbar-collapse" id="js-navbar-collapse">
+    <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-        <ul class="nav navbar-nav">
-          <li><a href="#/">Derniers tirs de tests</a></li>
-        </ul>
-      </div>
+      <ul class="nav navbar-nav">
+        <li><a href="#/">Derniers tirs de tests</a></li>
+      </ul>
     </div>
   </div>
 </div>
