--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -80,6 +80,7 @@
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/browser-storage.js"></script>
+<script src="scripts/confirmation-modal.js"></script>
 <script src="scripts/directives.js"></script>
 <script src="scripts/errors.js"></script>
 <script src="scripts/test-runs.js"></script>
