Advanced tag view

--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -87,6 +87,7 @@
 <script src="scripts/test-runs.js"></script>
 <script src="scripts/features.js"></script>
 <script src="scripts/scenarii.js"></script>
+<script src="scripts/test-run-tags.js"></script>
 <!-- endbuild -->
 </body>
 </html>
