--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -82,6 +82,7 @@
 <script src="scripts/browser-storage.js"></script>
 <script src="scripts/confirmation-modal.js"></script>
 <script src="scripts/directives.js"></script>
+<script src="scripts/components.js"></script>
 <script src="scripts/filters.js"></script>
 <script src="scripts/errors.js"></script>
 <script src="scripts/test-runs.js"></script>
