--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -33,13 +33,13 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#/">Tests Cucumber</a>
+      <a class="navbar-brand" ng-href="#/">Tests Cucumber</a>
     </div>
 
     <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
       <ul class="nav navbar-nav">
-        <li><a href="#/">Derniers tirs de tests</a></li>
+        <li><a ng-href="#/">Derniers tirs de tests</a></li>
       </ul>
     </div>
   </div>
