--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -9,6 +9,7 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
+  <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -72,6 +73,7 @@
 <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
 <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
 <script src="bower_components/angular-elastic/elastic.js"></script>
+<script src="bower_components/chartist/dist/chartist.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
