Presence backend API on a Web Socket

--- a/zucchini-ui-frontend/app/index.html
+++ b/zucchini-ui-frontend/app/index.html
@@ -74,6 +74,7 @@
 <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
 <script src="bower_components/angular-elastic/elastic.js"></script>
 <script src="bower_components/chartist/dist/chartist.min.js"></script>
+<script src="bower_components/pure-uuid/uuid.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -93,6 +94,7 @@
 <script src="scripts/scenarii.js"></script>
 <script src="scripts/test-run-tags.js"></script>
 <script src="scripts/url-builder.js"></script>
+<script src="scripts/presence.js"></script>
 <!-- endbuild -->
 </body>
 </html>
