URL builder for simpler URL generation

--- a/tests-cucumber-ui/app/index.html
+++ b/tests-cucumber-ui/app/index.html
@@ -92,6 +92,7 @@
 <script src="scripts/features.js"></script>
 <script src="scripts/scenarii.js"></script>
 <script src="scripts/test-run-tags.js"></script>
+<script src="scripts/url-builder.js"></script>
 <!-- endbuild -->
 </body>
 </html>
