--- a/zucchini-ui-frontend/app/index.html
+++ b/zucchini-ui-frontend/app/index.html
@@ -95,6 +95,9 @@
 <script src="scripts/test-run-tags.js"></script>
 <script src="scripts/url-builder.js"></script>
 <script src="scripts/presence.js"></script>
+<script src="scripts/websocket.js"></script>
+<script src="scripts/callback-container.js"></script>
+<script src="scripts/window-visibility.js"></script>
 <!-- endbuild -->
 </body>
 </html>
