Splitting components and directives files in one file per component / directive

--- a/zucchini-ui-frontend/app/index.html
+++ b/zucchini-ui-frontend/app/index.html
@@ -85,8 +85,15 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/browser-storage.js"></script>
 <script src="scripts/confirmation-modal.js"></script>
-<script src="scripts/directives.js"></script>
-<script src="scripts/components.js"></script>
+<script src="scripts/tc-element-info.js"></script>
+<script src="scripts/tc-feature-list.js"></script>
+<script src="scripts/tc-pie-chart.js"></script>
+<script src="scripts/tc-scenario-list.js"></script>
+<script src="scripts/tc-scenario-pie-chart.js"></script>
+<script src="scripts/tc-simple-text.js"></script>
+<script src="scripts/tc-stats-dashboard.js"></script>
+<script src="scripts/tc-status.js"></script>
+<script src="scripts/tc-tags.js"></script>
 <script src="scripts/filters.js"></script>
 <script src="scripts/errors.js"></script>
 <script src="scripts/test-runs.js"></script>
