--- a/zucchini-ui-frontend/app/index.html
+++ b/zucchini-ui-frontend/app/index.html
@@ -92,6 +92,7 @@
 <script src="scripts/tc-scenario-pie-chart.js"></script>
 <script src="scripts/tc-simple-text.js"></script>
 <script src="scripts/tc-stats-dashboard.js"></script>
+<script src="scripts/tc-stats-legend.js"></script>
 <script src="scripts/tc-status.js"></script>
 <script src="scripts/tc-tags.js"></script>
 <script src="scripts/filters.js"></script>
