Integrate Webpack build in the Gradle build

--- a/zucchini-ui-frontend/index.html
+++ b/zucchini-ui-frontend/index.html
@@ -5,8 +5,8 @@
   <title>Zucchini UI</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="/static/app.css">
-  <link rel="stylesheet" href="/static/vendor.css">
+  <link rel="stylesheet" href="/ui/app.css">
+  <link rel="stylesheet" href="/ui/vendor.css">
 </head>
 <body ng-app="zucchini-ui-frontend">
 
@@ -53,8 +53,11 @@
 
 </div>
 
-<script src="/static/vendor.js"></script>
-<script src="/static/app.js"></script>
+<!-- Dynamically generated configuration-->
+<script src="/ui/config.js"></script>
+
+<script src="/ui/vendor.js"></script>
+<script src="/ui/app.js"></script>
 
 </body>
 </html>
