Use ng-cloak to hide Angular template on load

--- a/zucchini-ui-frontend/index.html
+++ b/zucchini-ui-frontend/index.html
@@ -38,7 +38,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" ng-cloak>
 
   <div ng-controller="ErrorCtrl as ctrl">
     <div ng-if="ctrl.message" class="alert alert-danger" role="alert">
