--- a/zucchini-ui-frontend-react/index.html
+++ b/zucchini-ui-frontend-react/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8" />
-    <title>Zucchini UI (React version)</title>
+    <title>Zucchini UI &mdash; React</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/vendor.css">
