--- a/zucchini-ui-frontend-react/index.html
+++ b/zucchini-ui-frontend-react/index.html
@@ -1,24 +1,30 @@
 <!doctype html>
 <html class="no-js">
-  <head>
-    <meta charset="utf-8" />
-    <title>Zucchini UI &mdash; React</title>
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/static/vendor.css">
-    <link rel="stylesheet" href="/static/app.css">
-  </head>
-  <body>
 
-    <!--[if lte IE 8]>
+<head>
+  <meta charset="utf-8" />
+  <title>Zucchini UI &mdash; React</title>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/assets/vendor.css">
+  <link rel="stylesheet" href="/assets/app.css">
+</head>
+
+<body>
+
+  <!--[if lte IE 8]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
       your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div id="content"></div>
+  <div id="content"></div>
 
-    <script src="/static/vendor.js"></script>
-    <script src="/static/app.js"></script>
+  <!-- Dynamically generated configuration-->
+  <script src="/assets/config.js"></script>
 
-  </body>
+  <script src="/assets/vendor.js"></script>
+  <script src="/assets/app.js"></script>
+
+</body>
+
 </html>
