--- a/zucchini-ui-frontend-react/index.html
+++ b/zucchini-ui-frontend-react/index.html
@@ -6,8 +6,8 @@
   <title>Zucchini UI &mdash; React</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/assets/vendor.css">
-  <link rel="stylesheet" href="/assets/app.css">
+  <link rel="stylesheet" href="/ui/assets/vendor.css">
+  <link rel="stylesheet" href="/ui/assets/app.css">
 </head>
 
 <body>
@@ -20,10 +20,10 @@
   <div id="content"></div>
 
   <!-- Dynamically generated configuration-->
-  <script src="/assets/config.js"></script>
+  <script src="/ui/assets/config.js"></script>
 
-  <script src="/assets/vendor.js"></script>
-  <script src="/assets/app.js"></script>
+  <script src="/ui/assets/vendor.js"></script>
+  <script src="/ui/assets/app.js"></script>
 
 </body>
 
