Upgraded Webpack version

--- a/zucchini-ui-frontend/index.html
+++ b/zucchini-ui-frontend/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/ui/assets/vendor.css">
-  <link rel="stylesheet" href="/ui/assets/app.css">
+  <link rel="stylesheet" href="/ui/assets/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
   <script src="/ui/assets/config.js"></script>
 
   <script src="/ui/assets/vendor.js"></script>
-  <script src="/ui/assets/app.js"></script>
+  <script src="/ui/assets/main.js"></script>
 
 </body>
 
