--- a/zucchini-ui-frontend/index.html
+++ b/zucchini-ui-frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Zucchini UI</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/ui/assets/vendors~main.css">
   <link rel="stylesheet" href="/ui/assets/main.css">
 </head>
